--- a/pages/calculator/index.html
+++ b/pages/calculator/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <title>Calculator</title>
+    <title>Calculator | PouletEnSlip</title>
 </head>
 <body>
     <center><h1>Calculator</h1>
