--- a/pages/clicktest/index.html
+++ b/pages/clicktest/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Click Test</title>
+    <title>Click Test | PouletEnSlip</title>
     <link href="style.css" rel="stylesheet" type="text/css"></link>
     <script src="script.js"></script>
 </head>
