--- a/pages/tictactoe/index.html
+++ b/pages/tictactoe/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <title>Tic-Tac-Toe</title>
+    <title>Tic-Tac-Toe | PouletEnSlip</title>
 </head>
 <body>
     <center><h1>Tic-Tac-Toe</h1>
