--- a/pages/clicktest/index.html
+++ b/pages/clicktest/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>Click Test | PouletEnSlip</title>
     <link href="style.css" rel="stylesheet" type="text/css"></link>
     <script src="script.js"></script>
