--- a/pages/headsortails/index.html
+++ b/pages/headsortails/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <link rel="stylesheet" href="style.css">
-  <title>Heads or Tails</title>
+  <title>Heads or Tails | PouletEnSlip</title>
 </head>
 <body>
   <h1>Heads or Tails</h1>
