--- a/pages/clock/index.html
+++ b/pages/clock/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="style.css">
-    <title>Clock</title>
+    <title>Digital Clock | PouletEnSlip</title>
 </head>
 <body>
     <h1>DIGITAL CLOCK</h1>
