--- a/pages/clicktest/index.html
+++ b/pages/clicktest/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <title>Click Test | PouletEnSlip</title>
+    <title>Click Test</title>
     <link href="style.css" rel="stylesheet" type="text/css"></link>
     <script src="script.js"></script>
+    <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-    <center><div id="title"><b>Click Test</b></div><br>
+    <h1>Click Test</h1>
     <HR width="90%" color="white"><br><br>
-    <div id="info">Timer : 10.0s&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Click(s) : 0</div><br><br>
+    <div id="info">Timer : 10.0s&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number : 0</div><br><br>
     <button id="clicker">👊🏻</button><br><br>
     <input onClick="window.location.href=window.location.href" value="Reset" type="reset" class="bouton"><br><br>
     <div id="cps"></div>
