--- a/pages/headsortails/index.html
+++ b/pages/headsortails/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
   <h1>Heads or Tails</h1>
-  <center><div id="coin">
+  <div id="coin">
     <div class="side head"></div>
     <div class="side tail"></div>
-  </div></center><br><br>
+  </div><br><br>
   <button id="flip" onclick=fnClick()>Flip</button><br><br>
+  <a href="../">&#x2190;</a>
 </body>
 <script src="script.js"></script>
 </html>
