--- a/pages/tictactoe/index.html
+++ b/pages/tictactoe/index.html
@@ -7,7 +7,8 @@
     <title>Tic-Tac-Toe | PouletEnSlip</title>
 </head>
 <body>
-    <center><h1>Tic-Tac-Toe</h1>
+    <h1>Tic-Tac-Toe</h1>
+    <a href="../">&#x2190;</a>
     <br><h2 class="message"></h2>
     <div class="contenu">
         <div data-cell-index="0" class="cell" id="un"></div>
@@ -20,7 +21,7 @@
         <div data-cell-index="7" class="cell"></div>
         <div data-cell-index="8" class="cell" id="quatre"></div>
     </div>
-    <br><button onClick="window.location.href=window.location.href" id="new">New game</button></center>
+    <br><button onClick="window.location.href=window.location.href" id="new">New Game</button><br><br>
 </body>
 <script src="script.js"></script>
 </html>
