--- a/pages/clock/index.html
+++ b/pages/clock/index.html
@@ -4,12 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="style.css">
-    <title>Digital Clock | PouletEnSlip</title>
+    <title>Clock | PouletEnSlip</title>
+    <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
     <h1>DIGITAL CLOCK</h1>
     <div id="clock"></div><br>
     <div id="date"></div>
+    <a href="../">&#x2190;</a>
 </body>
 <script src="script.js"></script>
 </html>
