--- a/pages/fruits/index.html
+++ b/pages/fruits/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <link rel="stylesheet" href="fruits.css">
-  <title>Fruit list</title>
+  <title>Fruit list | PouletEnSlip</title>
   <script src="script.js"></script>
 </head>
 <body>
-  <h1><u>Fruit list:</u></h1>
+  <h1>Fruit list:</h1>
   <form>
-    <label>Check/uncheck all</label><input type="checkbox" id="cocher" name="check" onclick="cocherDecocher(this.checked);"><br><br>
-    <input type="checkbox" id="apple" name="case" class="fruits" onclick="changerTexte1()">Apple<br>
-    <input type="checkbox" id="pear" name="case" class="fruits" onclick="changerTexte1()">Pear<br>
-    <input type="checkbox" id="banana" name="case" class="fruits" onclick="changerTexte1()">Banana<br><br>
-    <input type="button" id="bouton1" name="bouton" value="Check all" onclick="boutonCocher()">
-    <input type="button" id="bouton2" name="bouton" value="Uncheck all" onclick="boutonDecocher()" disabled="true">
-    <p id="texte1" style="color:red">You didn't choose a fruit...</p>
-    <input type="button" id="bouton3" name="bouton" value="Submit" onclick="valider()" disabled="true">
+    <input type="checkbox" id="cocher" name="check" onclick="cocherDecocher(this.checked);"><label>Tout cocher/décocher</label><br><br>
+    <input type="checkbox" id="Apple" name="case" class="fruits" onclick="changerTexte1()"><label>Apple</label><br>
+    <input type="checkbox" id="Pear" name="case" class="fruits" onclick="changerTexte1()"><label>Pear</label><br>
+    <input type="checkbox" id="Banana" name="case" class="fruits" onclick="changerTexte1()"><label>Banana</label><br><br>
+    <input type="button" id="bouton1" name="bouton" value="Tout cocher" onclick="boutonCocher()">
+    <input type="button" id="bouton2" name="bouton" value="Tout décocher" onclick="boutonDecocher()" disabled="true">
+    <p id="texte1" style="color:red">Vous n'avez pas choisi de fruit...</p>
+    <input type="button" id="bouton3" name="bouton" value="Valider" onclick="valider()" disabled="true">
     <p id="texte2"></p>
   </form>
+  <a href="../">&#x2190;</a>
 </body>
 </html>
