--- a/pages/color/index.html
+++ b/pages/color/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="css/style.css">
-    <title>Color</title>
+    <title>Color | PouletEnSlip</title>
+    <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
     <h1>Color</h1><br>
     <h2>Hex : <span id="hex-value"></span></h2><br>
-    <a href="#" id="btn">🦄</a>
+    <button id="btn">🦄</button>
+    <footer><a href="../">&#x2190;</a></footer>
     <script src="js/app.js"></script>
 </body>
 </html>
