--- a/pages/clicktest/index.html
+++ b/pages/clicktest/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <title>Click Test</title>
+    <title>Click Test | PouletEnSlip</title>
     <link href="style.css" rel="stylesheet" type="text/css"></link>
     <script src="script.js"></script>
-    <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
     <h1>Click Test</h1>
     <HR width="90%" color="white"><br><br>
-    <div id="info">Timer : 10.0s&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number : 0</div><br><br>
+    <div id="info">Timer : 10.0s&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nombre : 0</div><br><br>
     <button id="clicker">👊🏻</button><br><br>
     <input onClick="window.location.href=window.location.href" value="Reset" type="reset" class="bouton"><br><br>
     <div id="cps"></div>
+    <a href="../">&#x2190;</a>
 </body>
 </html>
