--- a/pages/chronometer/index.html
+++ b/pages/chronometer/index.html
@@ -11,7 +11,8 @@
     <div id="chrono">00:00:00</div><br><br>
     <button class="bouton" onclick="startTimer()">START</button><br><br>
     <button class="bouton" onclick="stopTimer()">STOP</button><br><br>
-    <button class="bouton" onclick="resetTimer()">RESET</button>
+    <button class="bouton" onclick="resetTimer()">RESET</button><br><br>
+    <a href="../">&#x2190;</a>
 </body>
 <script src="script.js"></script>
 </html>
