--- a/pages/calculator/index.html
+++ b/pages/calculator/index.html
@@ -40,6 +40,6 @@
         <input class="lol3" type="button" value="Tan" onClick="calc.display.value+='Math.tan('">
         <input class="lol3" type="button" value="exp" onClick="calc.display.value+='Math.exp('">
     </form></br>
-    <a href="../">&#x2190;</a>
+    <a href="../../">&#x2190;</a>
 </body>
 </html>
