--- a/pages/chronometer/index.html
+++ b/pages/chronometer/index.html
@@ -12,7 +12,7 @@
     <button class="bouton" onclick="startTimer()">START</button><br><br>
     <button class="bouton" onclick="stopTimer()">STOP</button><br><br>
     <button class="bouton" onclick="resetTimer()">RESET</button><br><br>
-    <a href="../">&#x2190;</a>
+    <a href="../../">&#x2190;</a>
 </body>
 <script src="script.js"></script>
 </html>
