--- a/pages/clicktest/index.html
+++ b/pages/clicktest/index.html
@@ -14,6 +14,6 @@
     <button id="clicker">👊🏻</button><br><br>
     <input onClick="window.location.href=window.location.href" value="Reset" type="reset" class="bouton"><br><br>
     <div id="cps"></div>
-    <a href="../">&#x2190;</a>
+    <a href="../../">&#x2190;</a>
 </body>
 </html>
