--- a/pages/clock/index.html
+++ b/pages/clock/index.html
@@ -11,7 +11,7 @@
     <h1>DIGITAL CLOCK</h1>
     <div id="clock"></div><br>
     <div id="date"></div>
-    <a href="../">&#x2190;</a>
+    <a href="../../">&#x2190;</a>
 </body>
 <script src="script.js"></script>
 </html>
