--- a/pages/color/index.html
+++ b/pages/color/index.html
@@ -11,7 +11,7 @@
     <h1>Color</h1><br>
     <h2>Hex : <span id="hex-value"></span></h2><br>
     <button id="btn">🦄</button>
-    <footer><a href="../">&#x2190;</a></footer>
+    <footer><a href="../../">&#x2190;</a></footer>
     <script src="js/app.js"></script>
 </body>
 </html>
