--- a/pages/fruits/index.html
+++ b/pages/fruits/index.html
@@ -20,6 +20,6 @@
     <input type="button" id="bouton3" name="bouton" value="Valider" onclick="valider()" disabled="true">
     <p id="texte2"></p>
   </form>
-  <a href="../">&#x2190;</a>
+  <a href="../../">&#x2190;</a>
 </body>
 </html>
