--- a/pages/headsortails/index.html
+++ b/pages/headsortails/index.html
@@ -13,7 +13,7 @@
     <div class="side tail"></div>
   </div><br><br>
   <button id="flip" onclick=fnClick()>Flip</button><br><br>
-  <a href="../">&#x2190;</a>
+  <a href="../../">&#x2190;</a>
 </body>
 <script src="script.js"></script>
 </html>
