--- a/pages/tictactoe/index.html
+++ b/pages/tictactoe/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Tic-Tac-Toe</h1>
-    <a href="../">&#x2190;</a>
+    <a href="../../">&#x2190;</a>
     <br><h2 class="message"></h2>
     <div class="contenu">
         <div data-cell-index="0" class="cell" id="un"></div>
