--- a/pages/fruits/index.html
+++ b/pages/fruits/index.html
@@ -10,16 +10,16 @@
 <body>
   <h1>Fruit list:</h1>
   <form>
-    <input type="checkbox" id="cocher" name="check" onclick="cocherDecocher(this.checked);"><label>Tout cocher/décocher</label><br><br>
-    <input type="checkbox" id="Apple" name="case" class="fruits" onclick="changerTexte1()"><label>Apple</label><br>
-    <input type="checkbox" id="Pear" name="case" class="fruits" onclick="changerTexte1()"><label>Pear</label><br>
-    <input type="checkbox" id="Banana" name="case" class="fruits" onclick="changerTexte1()"><label>Banana</label><br><br>
-    <input type="button" id="bouton1" name="bouton" value="Tout cocher" onclick="boutonCocher()">
-    <input type="button" id="bouton2" name="bouton" value="Tout décocher" onclick="boutonDecocher()" disabled="true">
-    <p id="texte1" style="color:red">Vous n'avez pas choisi de fruit...</p>
-    <input type="button" id="bouton3" name="bouton" value="Valider" onclick="valider()" disabled="true">
+    <input type="checkbox" id="cocher" name="check" onclick="cocherDecocher(this.checked);"><label>Check/uncheck all</label><br><br>
+    <input type="checkbox" id="apple" name="case" class="fruits" onclick="changerTexte1()"><label>Apple</label><br>
+    <input type="checkbox" id="pear" name="case" class="fruits" onclick="changerTexte1()"><label>Pear</label><br>
+    <input type="checkbox" id="banana" name="case" class="fruits" onclick="changerTexte1()"><label>Banana</label><br><br>
+    <input type="button" id="bouton1" name="bouton" value="Check all" onclick="boutonCocher()">
+    <input type="button" id="bouton2" name="bouton" value="Uncheck all" onclick="boutonDecocher()" disabled="true">
+    <p id="texte1" style="color:red">You didn't choose a fruit...</p>
+    <input type="button" id="bouton3" name="bouton" value="Submit" onclick="valider()" disabled="true">
     <p id="texte2"></p>
   </form>
-  <a href="../../">&#x2190;</a>
+  <a href="../">&#x2190;</a>
 </body>
 </html>
