--- a/pages/clicktest/index.html
+++ b/pages/clicktest/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Click Test</h1>
     <HR width="90%" color="white"><br><br>
-    <div id="info">Timer : 10.0s&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nombre : 0</div><br><br>
+    <div id="info">Timer : 10.0s&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number : 0</div><br><br>
     <button id="clicker">👊🏻</button><br><br>
     <input onClick="window.location.href=window.location.href" value="Reset" type="reset" class="bouton"><br><br>
     <div id="cps"></div>
