--- a/pages/calculator/index.html
+++ b/pages/calculator/index.html
@@ -1,45 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
-    <link rel="stylesheet" href="style.css">
-    <title>Calculator | PouletEnSlip</title>
-    <meta name="robots" content="noindex, nofollow">
+	<title>Calculator | PouletEnSlip</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no">
+	<meta name="robots" content="noindex, nofollow">
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="atom-one-dark.min.css">
 </head>
 <body>
-    <h1>Calculator</h1>
-    <form name="calc">
-        <div><input id="display" type="text" id="myInput" value="" disabled></input><button id="clear" onclick="document.getElementById('myInput').value=''" title="Clear">C</button></div></br> 
-        <input type="button" value="7" onClick="calc.display.value+='7'">
-        <input type="button" value="8" onClick="calc.display.value+='8'">
-        <input type="button" value="9" onClick="calc.display.value+='9'">
-        <input class="lol" type="button" value="&#247" onClick="calc.display.value+='/'">
-        <input class="lol3" type="button" value="(" onClick="calc.display.value+='('">
-        <input class="lol3" type="button" value=")" onClick="calc.display.value+=')'">
-        <input class="lol3" type="button" value="Ln" onClick="calc.display.value+='Math.log('"></br>
-        <input type="button" value="4" onClick="calc.display.value+='4'">
-        <input type="button" value="5" onClick="calc.display.value+='5'">
-        <input type="button" value="6" onClick="calc.display.value+='6'">
-        <input class="lol" type="button" value="x" onClick="calc.display.value+='*'">
-        <input class="lol3" type="button" value="^" onClick="calc.display.value+='**'">
-        <input class="lol3" type="button" value="Cos" onClick="calc.display.value+='Math.cos('">
-        <input class="lol3" type="button" value="Log" onClick="calc.display.value+='Math.log10('"></br>
-        <input type="button" value="1" onClick="calc.display.value+='1'">
-        <input type="button" value="2" onClick="calc.display.value+='2'">
-        <input type="button" value="3" onClick="calc.display.value+='3'">
-        <input class="lol" type="button" value="-" onClick="calc.display.value+='-'">
-        <input class="lol3" type="button" value="π" onClick="calc.display.value+='Math.PI'">
-        <input class="lol3" type="button" value="Sin" onClick="calc.display.value+='Math.sin('">
-        <input class="lol3" type="button" value="√" onClick="calc.display.value+='Math.sqrt('"></br>
-        <input type="button" value="0" onClick="calc.display.value+='0'">
-        <input type="button" value="." onClick="calc.display.value+='.'">
-        <input class="lol2" type="button" value="=" onClick="calc.display.value=eval(calc.display.value)">
-        <input class="lol" type="button" value="+" onClick="calc.display.value+='+'">
-        <input class="lol3" type="button" value="%" onClick="calc.display.value+='/100'">
-        <input class="lol3" type="button" value="Tan" onClick="calc.display.value+='Math.tan('">
-        <input class="lol3" type="button" value="exp" onClick="calc.display.value+='Math.exp('">
-    </form></br>
-    <a href="../../">&#x2190;</a>
+	<h1><a href="../">&#x2190;</a> Calculator</h1>
+	<form name="calc">
+		<div class="ecran">
+			<input id="display" type="text" id="myInput" value="" disabled></input>
+			<button id="clear" onclick="document.getElementById('myInput').value=''" title="Clear">C</button>
+		</div></br>
+		<input type="button" value="7" onClick="calc.display.value+='7'">
+		<input type="button" value="8" onClick="calc.display.value+='8'">
+		<input type="button" value="9" onClick="calc.display.value+='9'">
+		<input class="lol" type="button" value="&#247" onClick="calc.display.value+='/'">
+		<input class="lol3" type="button" value="(" onClick="calc.display.value+='('">
+		<input class="lol3" type="button" value=")" onClick="calc.display.value+=')'">
+		<input class="lol3" type="button" value="Ln" onClick="calc.display.value+='Math.log('"></br>
+		<input type="button" value="4" onClick="calc.display.value+='4'">
+		<input type="button" value="5" onClick="calc.display.value+='5'">
+		<input type="button" value="6" onClick="calc.display.value+='6'">
+		<input class="lol" type="button" value="x" onClick="calc.display.value+='*'">
+		<input class="lol3" type="button" value="^" onClick="calc.display.value+='**'">
+		<input class="lol3" type="button" value="Cos" onClick="calc.display.value+='Math.cos('">
+		<input class="lol3" type="button" value="Log" onClick="calc.display.value+='Math.log10('"></br>
+		<input type="button" value="1" onClick="calc.display.value+='1'">
+		<input type="button" value="2" onClick="calc.display.value+='2'">
+		<input type="button" value="3" onClick="calc.display.value+='3'">
+		<input class="lol" type="button" value="-" onClick="calc.display.value+='-'">
+		<input class="lol3" type="button" value="π" onClick="calc.display.value+='Math.PI'">
+		<input class="lol3" type="button" value="Sin" onClick="calc.display.value+='Math.sin('">
+		<input class="lol3" type="button" value="√" onClick="calc.display.value+='Math.sqrt('"></br>
+		<input type="button" value="0" onClick="calc.display.value+='0'">
+		<input type="button" value="." onClick="calc.display.value+='.'">
+		<input class="lol2" type="button" value="=" onClick="calc.display.value=eval(calc.display.value)">
+		<input class="lol" type="button" value="+" onClick="calc.display.value+='+'">
+		<input class="lol3" type="button" value="%" onClick="calc.display.value+='/100'">
+		<input class="lol3" type="button" value="Tan" onClick="calc.display.value+='Math.tan('">
+		<input class="lol3" type="button" value="exp" onClick="calc.display.value+='Math.exp('">
+	</form><br>
+	<pre><code>	&lt;form name="calc"&gt;
+			&lt;div class="ecran"&gt;
+				&lt;input id="display" type="text" id="myInput" value="" disabled&gt;&lt;/input&gt;
+				&lt;button id="clear" onclick="document.getElementById('myInput').value=''" title="Clear"&gt;C&lt;/button&gt;
+			&lt;/div&gt;&lt;/br&gt; 
+			&lt;input type="button" value="7" onClick="calc.display.value+='7'"&gt;
+			&lt;input type="button" value="8" onClick="calc.display.value+='8'"&gt;
+			&lt;input type="button" value="9" onClick="calc.display.value+='9'"&gt;
+			&lt;input class="lol" type="button" value="&#247" onClick="calc.display.value+='/'"&gt;
+			&lt;input class="lol3" type="button" value="(" onClick="calc.display.value+='('"&gt;
+			&lt;input class="lol3" type="button" value=")" onClick="calc.display.value+=')'"&gt;
+			&lt;input class="lol3" type="button" value="Ln" onClick="calc.display.value+='Math.log('"&gt;&lt;/br&gt;
+			&lt;input type="button" value="4" onClick="calc.display.value+='4'"&gt;
+			&lt;input type="button" value="5" onClick="calc.display.value+='5'"&gt;
+			&lt;input type="button" value="6" onClick="calc.display.value+='6'"&gt;
+			&lt;input class="lol" type="button" value="x" onClick="calc.display.value+='*'"&gt;
+			&lt;input class="lol3" type="button" value="^" onClick="calc.display.value+='**'"&gt;
+			&lt;input class="lol3" type="button" value="Cos" onClick="calc.display.value+='Math.cos('"&gt;
+			&lt;input class="lol3" type="button" value="Log" onClick="calc.display.value+='Math.log10('"&gt;&lt;/br&gt;
+			&lt;input type="button" value="1" onClick="calc.display.value+='1'"&gt;
+			&lt;input type="button" value="2" onClick="calc.display.value+='2'"&gt;
+			&lt;input type="button" value="3" onClick="calc.display.value+='3'"&gt;
+			&lt;input class="lol" type="button" value="-" onClick="calc.display.value+='-'"&gt;
+			&lt;input class="lol3" type="button" value="π" onClick="calc.display.value+='Math.PI'"&gt;
+			&lt;input class="lol3" type="button" value="Sin" onClick="calc.display.value+='Math.sin('"&gt;
+			&lt;input class="lol3" type="button" value="√" onClick="calc.display.value+='Math.sqrt('"&gt;&lt;/br&gt;
+			&lt;input type="button" value="0" onClick="calc.display.value+='0'"&gt;
+			&lt;input type="button" value="." onClick="calc.display.value+='.'"&gt;
+			&lt;input class="lol2" type="button" value="=" onClick="calc.display.value=eval(calc.display.value)"&gt;
+			&lt;input class="lol" type="button" value="+" onClick="calc.display.value+='+'"&gt;
+			&lt;input class="lol3" type="button" value="%" onClick="calc.display.value+='/100'"&gt;
+			&lt;input class="lol3" type="button" value="Tan" onClick="calc.display.value+='Math.tan('"&gt;
+			&lt;input class="lol3" type="button" value="exp" onClick="calc.display.value+='Math.exp('"&gt;
+		&lt;/form&gt;
+	</code></pre>
+	<script src="highlight.min.js"></script>
+	<script src="highlightjs-line-numbers.js"></script>
+	<script>hljs.highlightAll();</script>
+	<script>hljs.initLineNumbersOnLoad();</script>
 </body>
 </html>
