--- a/pages/color/index.html
+++ b/pages/color/index.html
@@ -1,17 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
+    <title>Colors | PouletEnSlip</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Color | PouletEnSlip</title>
     <meta name="robots" content="noindex, nofollow">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="atom-one-dark.min.css">
 </head>
 <body>
-    <h1>Color</h1><br>
-    <h2>Hex : <span id="hex-value"></span></h2><br>
-    <button id="btn">🦄</button>
-    <footer><a href="../../">&#x2190;</a></footer>
-    <script src="js/app.js"></script>
+    <h1><a href="../">&#x2190;</a> Colors</h1>
+    <h2>Hex: <span id="hex-value"></span></h2><br>
+    <button id="btn">🦄</button><br><br>
+    <pre><code>	(function() {
+            const button = document.querySelector('#btn')
+            const body = document.querySelector('body')
+            const hexValues = [0,1,2,3,4,5,6,7,8,9,'A','B','C','D','E','F']
+            const value = document.querySelector('#hex-value')
+        
+            button.addEventListener('click', changeHex)
+        
+            function changeHex() {
+                let hex = '#'
+                for (let i = 0; i < 6; i++) {
+                    const index = Math.floor(Math.random()*hexValues.length)
+                    hex += hexValues[index]
+                }
+                value.textContent = hex
+                body.style.backgroundColor = hex
+            }
+        } )()
+    </code></pre>
+    <script src="app.js"></script>
+    <script src="highlight.min.js"></script>
+    <script src="highlightjs-line-numbers.js"></script>
+    <script>hljs.highlightAll();</script>
+    <script>hljs.initLineNumbersOnLoad();</script>
 </body>
 </html>
