--- a/pages/calculator/index.html
+++ b/pages/calculator/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="atom-one-dark.min.css">
 </head>
 <body>
-	<h1><a href="../">&#x2190;</a> Calculator</h1>
+	<h1><a href="../../">&#x2190;</a> Calculator</h1>
 	<form name="calc">
 		<div class="ecran">
 			<input id="display" type="text" id="myInput" value="" disabled></input>
