--- a/pages/chronometer/index.html
+++ b/pages/chronometer/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="atom-one-dark.min.css">
 </head>
 <body>
-	<h1><a href="../">&#x2190;</a> Chronometer</h1>
+	<h1><a href="../../">&#x2190;</a> Chronometer</h1>
 	<div id="chrono">00:00:00</div><br><br>
 	<button class="bouton" onclick="startTimer()">START</button><br><br>
 	<button class="bouton" onclick="stopTimer()">STOP</button><br><br>
