--- a/pages/clicktest/index.html
+++ b/pages/clicktest/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="atom-one-dark.min.css">
 </head>
 <body>
-    <h1><a href="../">&#x2190;</a> Click Test</h1>
+    <h1><a href="../../">&#x2190;</a> Click Test</h1>
     <HR width="90%" color="white"><br><br>
     <div id="info">Timer : 10.0s&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number : 0</div><br><br>
     <button id="clicker">👊🏻</button><br><br>
