--- a/pages/clock/index.html
+++ b/pages/clock/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="atom-one-dark.min.css">
 </head>
 <body>
-    <h1><a href="../">&#x2190;</a> DIGITAL CLOCK</h1>
+    <h1><a href="../../">&#x2190;</a> DIGITAL CLOCK</h1>
     <div id="clock"></div><br>
     <div id="date"></div><br>
     <pre><code>	let clock = document.getElementById('clock');
