--- a/pages/color/index.html
+++ b/pages/color/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="atom-one-dark.min.css">
 </head>
 <body>
-    <h1><a href="../">&#x2190;</a> Colors</h1>
+    <h1><a href="../../">&#x2190;</a> Colors</h1>
     <h2>Hex: <span id="hex-value"></span></h2><br>
     <button id="btn">🦄</button><br><br>
     <pre><code>	(function() {
