--- a/pages/fruits/index.html
+++ b/pages/fruits/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="atom-one-dark.min.css">
 </head>
 <body>
-	<h1><a href="../">&#x2190;</a> Fruit list</h1>
+	<h1><a href="../../">&#x2190;</a> Fruit list</h1>
 	<form>
 		<input type="checkbox" id="cocher" name="check" onclick="cocherDecocher(this.checked);"><label>Check/uncheck all</label><br><br>
 		<input type="checkbox" id="pomme" name="case" class="fruits" onclick="changerTexte1()"><label>Apple</label><br>
