--- a/pages/headsortails/index.html
+++ b/pages/headsortails/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="atom-one-dark.min.css">
 </head>
 <body>
-	<h1><a href="../">&#x2190;</a> Heads or Tails</h1>
+	<h1><a href="../../">&#x2190;</a> Heads or Tails</h1>
 	<div id="coin">
 		<div class="side head"></div>
 		<div class="side tail"></div>
