--- a/pages/tictactoe/index.html
+++ b/pages/tictactoe/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="atom-one-dark.min.css">
 </head>
 <body>
-    <h1><a href="../">&#x2190;</a> Tic-Tac-Toe</h1>
+    <h1><a href="../../">&#x2190;</a> Tic-Tac-Toe</h1>
     <h2 class="message"></h2>
     <div class="contenu">
         <div data-cell-index="0" class="cell" id="un"></div>
