--- a/pages/chronometer/index.html
+++ b/pages/chronometer/index.html
@@ -51,15 +51,15 @@
 			sec = 0;
 		}
 	
-		if (sec < 10 || sec == 0) {
+		if (sec &lt; 10 || sec == 0) {
 			sec = '0' + sec;
 		}
 	
-		if (min < 10 || min == 0) {
+		if (min &lt; 10 || min == 0) {
 			min = '0' + min;
 		}
 	
-		if (hr < 10 || hr == 0) {
+		if (hr &lt; 10 || hr == 0) {
 			hr = '0' + hr;
 		}
 	
