--- a/pages/color/index.html
+++ b/pages/color/index.html
@@ -22,7 +22,7 @@
         
             function changeHex() {
                 let hex = '#'
-                for (let i = 0; i < 6; i++) {
+                for (let i = 0; i &lt; 6; i++) {
                     const index = Math.floor(Math.random()*hexValues.length)
                     hex += hexValues[index]
                 }
