--- a/pages/fruits/index.html
+++ b/pages/fruits/index.html
@@ -52,7 +52,7 @@
 	function changerTexte1() {
 		var tableCheck = document.getElementsByClassName('fruits')
 		var nb = 0;
-		for (var i = 0; i < 3; i++) {
+		for (var i = 0; i &lt; 3; i++) {
 			if (tableCheck[i].checked == true) nb++;
 			if (nb == 0) {
 				texte1.style.color = "red";
