--- a/pages/tictactoe/index.html
+++ b/pages/tictactoe/index.html
@@ -69,7 +69,7 @@
         
         function verification() {
             let partieGagnee = false;
-            for (let i = 0; i <= 7; i++) {
+            for (let i = 0; i &lt;= 7; i++) {
                 var condGagner = conditionsGagner[i];
                 let a = etats[condGagner[0]];
                 let b = etats[condGagner[1]];
@@ -119,5 +119,4 @@
     <script>hljs.highlightAll();</script>
     <script>hljs.initLineNumbersOnLoad();</script>
 </body>
-<script src="script.js"></script>
 </html>
