--- a/pages/calculator/index.html
+++ b/pages/calculator/index.html
@@ -46,30 +46,30 @@
 	</form><br>
 	<pre><code>	&lt;form name="calc"&gt;
 		&lt;div class="ecran"&gt;
-			&lt;input id="display" type="text" id="myInput" value="" disabled&gt;&lt;/input&gt;
-			&lt;button id="clear" onclick="document.getElementById('myInput').value=''" title="Clear"&gt;C&lt;/button&gt;
-		&lt;/div&gt;&lt;/br&gt; 
+			&lt;input id="display" type="text" value="" disabled&gt;
+			&lt;button id="clear" onclick="document.getElementById('display').value=''" title="Clear"&gt;C&lt;/button&gt;
+		&lt;/div&gt;&lt;br&gt; 
 		&lt;input type="button" value="7" onClick="calc.display.value+='7'"&gt;
 		&lt;input type="button" value="8" onClick="calc.display.value+='8'"&gt;
 		&lt;input type="button" value="9" onClick="calc.display.value+='9'"&gt;
 		&lt;input class="lol" type="button" value="&#247;" onClick="calc.display.value+='/'"&gt;
 		&lt;input class="lol3" type="button" value="(" onClick="calc.display.value+='('"&gt;
 		&lt;input class="lol3" type="button" value=")" onClick="calc.display.value+=')'"&gt;
-		&lt;input class="lol3" type="button" value="Ln" onClick="calc.display.value+='Math.log('"&gt;&lt;/br&gt;
+		&lt;input class="lol3" type="button" value="Ln" onClick="calc.display.value+='Math.log('"&gt;&lt;br&gt;
 		&lt;input type="button" value="4" onClick="calc.display.value+='4'"&gt;
 		&lt;input type="button" value="5" onClick="calc.display.value+='5'"&gt;
 		&lt;input type="button" value="6" onClick="calc.display.value+='6'"&gt;
 		&lt;input class="lol" type="button" value="x" onClick="calc.display.value+='*'"&gt;
 		&lt;input class="lol3" type="button" value="^" onClick="calc.display.value+='**'"&gt;
 		&lt;input class="lol3" type="button" value="Cos" onClick="calc.display.value+='Math.cos('"&gt;
-		&lt;input class="lol3" type="button" value="Log" onClick="calc.display.value+='Math.log10('"&gt;&lt;/br&gt;
+		&lt;input class="lol3" type="button" value="Log" onClick="calc.display.value+='Math.log10('"&gt;&lt;br&gt;
 		&lt;input type="button" value="1" onClick="calc.display.value+='1'"&gt;
 		&lt;input type="button" value="2" onClick="calc.display.value+='2'"&gt;
 		&lt;input type="button" value="3" onClick="calc.display.value+='3'"&gt;
 		&lt;input class="lol" type="button" value="-" onClick="calc.display.value+='-'"&gt;
 		&lt;input class="lol3" type="button" value="π" onClick="calc.display.value+='Math.PI'"&gt;
 		&lt;input class="lol3" type="button" value="Sin" onClick="calc.display.value+='Math.sin('"&gt;
-		&lt;input class="lol3" type="button" value="√" onClick="calc.display.value+='Math.sqrt('"&gt;&lt;/br&gt;
+		&lt;input class="lol3" type="button" value="√" onClick="calc.display.value+='Math.sqrt('"&gt;&lt;br&gt;
 		&lt;input type="button" value="0" onClick="calc.display.value+='0'"&gt;
 		&lt;input type="button" value="." onClick="calc.display.value+='.'"&gt;
 		&lt;input class="lol2" type="button" value="=" onClick="calc.display.value=eval(calc.display.value)"&gt;
