--- a/pages/chronometer/index.html
+++ b/pages/chronometer/index.html
@@ -11,9 +11,9 @@
 <body>
 	<h1><a href="../../">&#x2190;</a> Chronometer</h1>
 	<div id="chrono">00:00:00</div><br><br>
-	<button class="bouton" onclick="startTimer()">START</button><br><br>
-	<button class="bouton" onclick="stopTimer()">STOP</button><br><br>
-	<button class="bouton" onclick="resetTimer()">RESET</button><br><br><br>
+	<button type="button" class="bouton" onclick="startTimer()">START</button><br><br>
+	<button type="button" class="bouton" onclick="stopTimer()">STOP</button><br><br>
+	<button type="button" class="bouton" onclick="resetTimer()">RESET</button><br><br><br>
 	<pre><code>	const timer = document.getElementById('chrono');
 	var hr = 0;
 	var min = 0;
