--- a/pages/color/index.html
+++ b/pages/color/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1><a href="../../">&#x2190;</a> Colors</h1>
     <h2>Hex: <span id="hex-value"></span></h2><br>
-    <button id="btn">🦄</button><br><br>
+    <button type="button" id="btn">🦄</button><br><br>
     <pre><code>	(function() {
             const button = document.querySelector('#btn')
             const body = document.querySelector('body')
