--- a/pages/headsortails/index.html
+++ b/pages/headsortails/index.html
@@ -14,7 +14,7 @@
 		<div class="side head"></div>
 		<div class="side tail"></div>
 	</div><br><br>
-	<button id="flip" onclick=fnClick()>Flip</button><br><br>
+	<button type="button" id="flip" onclick=fnClick()>Flip</button><br><br>
 	<pre><code>	function fnClick() {
 		var flipResult = Math.floor(Math.random() * 10);
 		if (flipResult &lt; 5) {
