--- a/pages/tictactoe/index.html
+++ b/pages/tictactoe/index.html
@@ -22,7 +22,7 @@
         <div data-cell-index="7" class="cell"></div>
         <div data-cell-index="8" class="cell" id="quatre"></div>
     </div>
-    <br><br><div id="boutonNew"><button onClick="window.location.href=window.location.href" id="new">New Game</button></div>
+    <br><br><div id="boutonNew"><button type="button" onClick="window.location.href=window.location.href" id="new">New Game</button></div>
     <pre><code>	var jeuActif = true;
         var joueurActif = "X";
         var etats = ["","","","","","","","",""];
