--- a/pages/calculator/index.html
+++ b/pages/calculator/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
 	<h1><a href="../../">&#x2190;</a> Calculator</h1>
-	<form name="calc">
+	<form action="" name="calc">
 		<div class="ecran">
 			<input id="display" type="text" value="" disabled>
-			<button id="clear" onclick="document.getElementById('display').value=''" title="Clear">C</button>
+			<input type="reset" value="C" id="clear">
 		</div><br>
 		<input type="button" value="7" onClick="calc.display.value+='7'">
 		<input type="button" value="8" onClick="calc.display.value+='8'">
@@ -44,10 +44,10 @@
 		<input class="lol3" type="button" value="Tan" onClick="calc.display.value+='Math.tan('">
 		<input class="lol3" type="button" value="exp" onClick="calc.display.value+='Math.exp('">
 	</form><br>
-	<pre><code>	&lt;form name="calc"&gt;
+	<pre><code>	&lt;form action="" name="calc"&gt;
 		&lt;div class="ecran"&gt;
 			&lt;input id="display" type="text" value="" disabled&gt;
-			&lt;button id="clear" onclick="document.getElementById('display').value=''" title="Clear"&gt;C&lt;/button&gt;
+			&lt;input type="reset" value="C" id="clear"&gt;
 		&lt;/div&gt;&lt;br&gt; 
 		&lt;input type="button" value="7" onClick="calc.display.value+='7'"&gt;
 		&lt;input type="button" value="8" onClick="calc.display.value+='8'"&gt;
