--- a/pages/calculator/index.html
+++ b/pages/calculator/index.html
@@ -12,7 +12,7 @@
 	<h1><a href="../../">&#x2190;</a> Calculator</h1>
 	<form action="" name="calc">
 		<div class="ecran">
-			<input id="display" type="text" value="" disabled>
+			<input id="display" type="text" disabled>
 			<input type="reset" value="C" id="clear">
 		</div><br>
 		<input type="button" value="7" onClick="calc.display.value+='7'">
@@ -46,7 +46,7 @@
 	</form><br>
 	<pre><code>	&lt;form action="" name="calc"&gt;
 		&lt;div class="ecran"&gt;
-			&lt;input id="display" type="text" value="" disabled&gt;
+			&lt;input id="display" type="text" disabled&gt;
 			&lt;input type="reset" value="C" id="clear"&gt;
 		&lt;/div&gt;&lt;br&gt; 
 		&lt;input type="button" value="7" onClick="calc.display.value+='7'"&gt;
